# stripe

./: .gitignore  .travis.yml  CONTRIBUTING.md  COVERAGE.md  README  README.md  Web.Stripe.Balance.imports  Web.Stripe.Client.Internal.imports  Web.Stripe.Internal.StripeError.imports  Web.Stripe.Util.imports  cabal.project  cabal.project.freeze  circle.yml  default.nix  release.nix  result  stack-7.10.2.yaml  stack-7.8.4.yaml  stack-8.0.1.yaml  stack-head.yaml  stack.yaml  stripe-haskell.cabal  stripe-simple.cabal  upload.nix
.github/: FUNDING.yml
src/Web/: Stripe.hs
src/Web/Stripe/: Account.hs  ApplicationFee.hs  ApplicationFeeRefund.hs  ApplicationFeeRefunds.hs  Balance.hs  Bitcoin.hs  Card.hs  Charge.hs  Client.hs  Coupon.hs  Customer.hs  Discount.hs  Dispute.hs  Disputes.hs  Event.hs  Invoice.hs  InvoiceItem.hs  Plan.hs  Recipient.hs  Recipients.hs  Refund.hs  Refunds.hs  Subscription.hs  Subscriptions.hs  Token.hs  Transfer.hs  Transfers.hs  Types.hs  Util.hs
src/Web/Stripe/Client/: Error.hs  Internal.hs  Types.hs  Util.hs
src/Web/Stripe/Internal/: Class.hs  StripeError.hs
src/Web/Stripe/Types/: Util.hs
stripe/: default.nix  stripe.cabal
stripe-core/: default.nix  stripe-core.cabal  stripe-core.nix
stripe-core/src/Web/: Stripe.hs
stripe-core/src/Web/Stripe/: Account.hs  ApplicationFee.hs  ApplicationFeeRefund.hs  Balance.hs  Card.hs  Charge.hs  Client.hs  Coupon.hs  Customer.hs  Discount.hs  Dispute.hs  Error.hs  Event.hs  Invoice.hs  InvoiceItem.hs  PaymentIntent.hs  PaymentMethod.hs  Plan.hs  Recipient.hs  Refund.hs  Session.hs  SetupIntent.hs  StripeRequest.hs  Subscription.hs  Token.hs  Transfer.hs  Types.hs  Util.hs
stripe-core/src/Web/Stripe/Client/: Error.hs  Types.hs  Util.hs
stripe-core/src/Web/Stripe/Types/: Util.hs
stripe-core/tests/: AllTests.hs
stripe-core/tests/Test/: Account.hs  ApplicationFee.hs  ApplicationFeeRefund.hs  Balance.hs  Card.hs  Charge.hs  Config.hs  Coupon.hs  Customer.hs  Discount.hs  Dispute.hs  Event.hs  Invoice.hs  InvoiceItem.hs  Plan.hs  Prelude.hs  Recipient.hs  Refund.hs  Subscription.hs  Token.hs  Transfer.hs  Util.hs
stripe-core/tests/Web/Stripe/Test/: Account.hs  AllTests.hs  ApplicationFee.hs  Charge.hs  Config.hs  Coupon.hs  Dispute.hs  Event.hs  Plan.hs  Prelude.hs  Recipient.hs  Refund.hs
stripe-haskell/: README.md  default.nix  shell.nix  stripe-haskell.cabal  stripe-haskell.nix
stripe-haskell/src-http-client/Web/Stripe/Client/: Stripe.hs
stripe-haskell/src/Web/: Stripe.hs
stripe-http-client/: LICENSE  default.nix  stripe-http-client.cabal
stripe-http-client/src/Web/Stripe/Client/: HttpClient.hs
stripe-http-client/tests/: Main.hs
stripe-http-streams/: default.nix  shell.nix  stripe-http-streams.cabal  stripe-http-streams.nix
stripe-http-streams/src/Web/Stripe/Client/: HttpStreams.hs
stripe-http-streams/tests/: Main.hs
stripe-tests/: LICENSE  default.nix  stripe-tests.cabal  stripe-tests.nix
stripe-tests/tests/Web/Stripe/Test/: Account.hs  AllTests.hs  ApplicationFee.hs  ApplicationFeeRefund.hs  Balance.hs  Card.hs  Charge.hs  Config.hs  Coupon.hs  Customer.hs  Discount.hs  Dispute.hs  Event.hs  Invoice.hs  InvoiceItem.hs  PaymentIntent.hs  PaymentMethod.hs  Plan.hs  Prelude.hs  Recipient.hs  Refund.hs  SetupIntent.hs  Subscription.hs  Token.hs  Transfer.hs  Util.hs
stripe/src-http-streams/Web/Stripe/Client/: Stripe.hs
stripe/src/Web/: Stripe.hs
test-suite/Web/Stripe/: TestClient.hs
tests/: HLint.hs  Main.hs
tests/Test/: Account.hs  ApplicationFee.hs  ApplicationFeeRefund.hs  Balance.hs  Bitcoin.hs  Card.hs  Charge.hs  Config.hs  Coupon.hs  Customer.hs  Discount.hs  Dispute.hs  Event.hs  Invoice.hs  InvoiceItem.hs  Plan.hs  Raw.hs  Recipient.hs  Refund.hs  Stripe.hs  Subscription.hs  Token.hs  Transfer.hs  Util.hs
tests/Test/Stripe/: Account.hs  Card.hs  Charge.hs  Customer.hs
