name:                stripe-haskell
version:             0.1.0.0
synopsis:            Stripe API for Haskell
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
description:         
 .
 <<https://stripe.com/img/navigation/logo@2x.png>> 
 .

Test-Suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    build-depends:    HsOpenSSL
                    , aeson
                    , base >=4.7 && <4.8
                    , bytestring
                    , either
                    , hspec
                    , http-streams
                    , io-streams
                    , mtl >= 2.1.3.1
                    , random >= 1.1
                    , stripe-haskell
                    , text
                    , time
                    , transformers
                    , unordered-containers
                    , vector
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts

Benchmark benchmarks
    type:             exitcode-stdio-1.0
    main-is:          benchmarks/Main.hs
    build-depends:    base
                    , criterion
                    , mtl >= 2.1.3.1
                    , stripe-haskell
    default-language: Haskell2010
    ghc-options:      -Wall 

library 
  hs-source-dirs:      src
  build-depends:       HsOpenSSL
                     , aeson
                     , base >=4.7 && <4.8
                     , bytestring
                     , either
                     , hspec
                     , http-streams
                     , io-streams
                     , mtl >= 2.1.3.1
                     , random >= 1.1
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
              
  default-language:    Haskell2010
  other-modules:       Web.Stripe.Client
                       Web.Stripe.Client.Internal
                       Web.Stripe.Client.Error
                       Web.Stripe.Client.Types
                       Web.Stripe.Client.Util
                       Web.Stripe.Types
                       Web.Stripe.Types.Util
  exposed-modules:     
                       Web.Stripe
                       Web.Stripe.Account
                       Web.Stripe.ApplicationFee
                       Web.Stripe.ApplicationFeeRefund
                       Web.Stripe.Balance
                       Web.Stripe.Card
                       Web.Stripe.Charge
                       Web.Stripe.Coupon
                       Web.Stripe.Customer
                       Web.Stripe.Discount
                       Web.Stripe.Dispute
                       Web.Stripe.Event
                       Web.Stripe.Invoice
                       Web.Stripe.InvoiceItem
                       Web.Stripe.Plan
                       Web.Stripe.Recipient
                       Web.Stripe.Refund
                       Web.Stripe.Subscription
                       Web.Stripe.Token
                       Web.Stripe.Transfer
  ghc-options:        -Wall -threaded -rtsopts

source-repository head
  type:     git
  location: git://github.com/dmjio/stripe-haskell.git