name:                stripe-simple
version:             0.1.0.0
synopsis:            stripe bindings
description:         stripe bindings
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Test-Suite Tests
    type:       exitcode-stdio-1.0
    main-is:    test-suite/Web/Client/TestClient.hs
    build-depends: base, QuickCheck, stripe-simple
    hs-source-dirs: src, test-suite

library 
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
                     , http-streams
                     , aeson
                     , bytestring
                     , unordered-containers
                     , text
                     , HsOpenSSL
                     , io-streams
                     , time
  default-language:    Haskell2010
  exposed-modules:     Web.Stripe.Client

