name:                stripe-simple
version:             0.1.0.0
synopsis:            Simple haskell bindings to the Stripe API
description:         Simple haskell bindings to the Stripe API
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Test-Suite Tests
    type:             exitcode-stdio-1.0
    main-is:          tests/Main.hs
    build-depends:    base, stripe-simple, tasty
    default-language: Haskell2010
    ghc-options:      -Wall

Benchmark Benchmarks
    type:             exitcode-stdio-1.0
    main-is:          benchmarks/Main.hs
    build-depends:    base, stripe-simple, criterion
    default-language: Haskell2010
    ghc-options:      -Wall

library 
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
                     , http-streams
                     , aeson
                     , bytestring
                     , unordered-containers
                     , text
                     , HsOpenSSL
                     , io-streams
                     , time
                     , transformers
                     , mtl
  default-language:    Haskell2010
  exposed-modules:     Web.Stripe.Client
  ghc-options:        -Wall

