name:                stripe-simple
version:             0.1.0.0
synopsis:            Simple haskell bindings to the Stripe API
description:         Simple haskell bindings to the Stripe API
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Test-Suite tests
    type:             exitcode-stdio-1.0
    main-is:          tests/Main.hs
    build-depends:    base, stripe-simple, bytestring, mtl, text, transformers
    default-language: Haskell2010
    ghc-options:      -Wall -threaded

Benchmark benchmarks
    type:             exitcode-stdio-1.0
    main-is:          benchmarks/Main.hs
    build-depends:    base, stripe-simple, criterion
    default-language: Haskell2010
    ghc-options:      -Wall -threaded

library 
  hs-source-dirs:      src
  build-depends:       aeson
                     , base >=4.7 && <4.8
                     , bytestring
                     , HsOpenSSL
                     , http-streams
                     , io-streams
                     , mtl
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
              
  default-language:    Haskell2010
  other-modules:       Web.Stripe.Client.Internal
                       Web.Stripe.Client.Error
                       Web.Stripe.Client.Types
                       Web.Stripe.Client.Util
                       Web.Stripe.Types
  exposed-modules:     Web.Stripe.Client
                       Web.Stripe.Account
                       Web.Stripe.ApplicationFee
                       Web.Stripe.ApplicationFeeRefunds
                       Web.Stripe.Balance
                       Web.Stripe.Card
                       Web.Stripe.Charge
                       Web.Stripe.Coupon
                       Web.Stripe.Customer
                       Web.Stripe.Discount
                       Web.Stripe.Disputes
                       Web.Stripe.Event
                       Web.Stripe.Invoice
                       Web.Stripe.InvoiceItem
                       Web.Stripe.Plan
                       Web.Stripe.Recipient
                       Web.Stripe.Refunds
                       Web.Stripe.Subscriptions
                       Web.Stripe.Token
                       Web.Stripe.Transfers
  ghc-options:        -Wall -threaded

source-repository head
  type:     git
  location: git://github.com/dmjio/stripe-simple.git