name:                stripe-core
version:             2.5.0
synopsis:            Stripe API for Haskell - Pure Core
license:             MIT
license-file:        LICENSE
author:              David Johnson, Jeremy Shaw
maintainer:          djohnson.m@gmail.com
copyright:           Copyright (c) 2016 David M. Johnson, Jeremy Shaw
homepage:            https://github.com/dmjio/stripe-haskell
bug-reports:         https://github.com/dmjio/stripe-haskell/issues
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Description:
    .
    <<https://stripe.com/img/navigation/logo@2x.png>>
    .
    [Pure API Wrapper]
    `stripe-core` provides a complete binding to the Stripe API. `stripe-core` provides pure wrappers around all the Stripe API objects and methods. `stripe-core` is pure and is not tied to any particular HTTP client library. End users will typically install the `stripe-haskell` package which pulls in the `stripe-http-client` library to obtain a complete set of functionality.

library
  hs-source-dirs:      src
  build-depends:       aeson                >= 0.8 && < 0.10 || >= 0.11 && < 1.5
                     , base                 >= 4.7   && < 5
                     , bytestring           >= 0.10  && < 0.11
                     , mtl                  >= 2.1.2 && < 2.3
                     , text                 >= 1.0   && < 1.3
                     , time                 >= 1.4   && < 1.9
                     , transformers         >= 0.3   && < 0.6
                     , unordered-containers >= 0.2.5 && < 0.3

  default-language:    Haskell2010
  other-modules:       Web.Stripe.Types.Util
  exposed-modules:
                       Web.Stripe.Account
                       Web.Stripe.ApplicationFee
                       Web.Stripe.ApplicationFeeRefund
                       Web.Stripe.Balance
                       Web.Stripe.Client
                       Web.Stripe.Card
                       Web.Stripe.Charge
                       Web.Stripe.Coupon
                       Web.Stripe.Customer
                       Web.Stripe.Discount
                       Web.Stripe.Dispute
                       Web.Stripe.Error
                       Web.Stripe.Event
                       Web.Stripe.Invoice
                       Web.Stripe.InvoiceItem
                       Web.Stripe.Plan
                       Web.Stripe.Recipient
                       Web.Stripe.Refund
                       Web.Stripe.StripeRequest
                       Web.Stripe.Subscription
                       Web.Stripe.Token
                       Web.Stripe.Transfer
                       Web.Stripe.Types
                       Web.Stripe.Util

  ghc-options:        -Wall

source-repository head
  type:     git
  subdir:   stripe-core
  location: git://github.com/dmjio/stripe-haskell.git
