name:                stripe-haskell
version:             2.5.0
synopsis:            Stripe API for Haskell
license:             MIT
license-file:        LICENSE
author:              David Johnson, Jeremy Shaw
maintainer:          djohnson.m@gmail.com
copyright:           Copyright (c) 2016 David M. Johnson, Jeremy Shaw
homepage:            https://github.com/dmjio/stripe
bug-reports:         https://github.com/dmjio/stripe/issues
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Description:         For usage information please consult README.md

flag http-streams
  default: False

library
  build-depends:
    base >= 4 && < 5,
    stripe-core
  default-language:
    Haskell2010
  exposed-modules:
    Web.Stripe
    Web.Stripe.Client.Stripe
  ghc-options:
    -Wall
  if flag(http-streams)
     hs-source-dirs:
       src src-http-streams
     build-depends:
       stripe-http-streams
  else
     hs-source-dirs:
      src src-http-client
     build-depends:
      stripe-http-client


source-repository head
  type:     git
  location: git://github.com/dmjio/stripe.git
  subdir: stripe
