name:                stripe-http-streams
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           Copyright (c) 2014 David M. Johnson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Web.Stripe.Client.HttpStreams
  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:         base         >=4.7  && <4.8
                       , aeson        >=0.8  && <0.9
                       , bytestring   >=0.10 && <0.11
                       , HsOpenSSL    >=0.11 && <0.12
                       , http-streams >=0.7  && <0.8
                       , io-streams   >=1.2  && <1.3
                       , mtl          >=2.1  && <2.2
                       , stripe-core
                       , text         >=1.2  && <1.3
                       , transformers >=0.3  && <0.4
  ghc-options          -Wall

Test-Suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    build-depends:    HsOpenSSL
                    , aeson
                    , base >=4.7 && <4.8
                    , bytestring
                    , free
                    , hspec >= 1.11.4
                    , http-streams
                    , random >= 1.1
                    , stripe-core
                    , stripe-http-streams
                    , stripe-tests
                    , text
                    , time
                    , transformers
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts
