name:                stripe-http-streams
version:             2.4.0
license:             MIT
license-file:        LICENSE
author:              David Johnson, Jeremy Shaw
synopsis:            Stripe API for Haskell - http-streams backend
maintainer:          djohnson.m@gmail.com
copyright:           Copyright (c) 2016 David M. Johnson, Jeremy Shaw
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Description:
    .
    <<https://stripe.com/img/navigation/logo@2x.png>>
    .
    [Access Stripe API using http-streams]
    This package provides access to the Stripe API using `stripe-core` and `http-streams`. See also the `stripe` package.

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Web.Stripe.Client.HttpStreams
  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:         base         >= 4.7  && < 5
                       , aeson        >= 0.8 && < 0.10 || >= 0.11 && < 1.3
                       , bytestring   >= 0.10 && < 0.11
                       , HsOpenSSL    >= 0.11 && < 0.12
                       , http-streams >= 0.7  && < 0.9
                       , io-streams   >= 1.2  && < 1.6
                       , stripe-core
                       , text         >= 1.1  && < 1.3
  ghc-options:         -Wall

Test-Suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    build-depends:    HsOpenSSL
                    , base                >= 4.7  && < 5
                    , free                >= 4.10 && < 6
                    , hspec               >= 2.1.0 && < 2.5
                    , http-streams        >= 0.7  && < 0.9
                    , stripe-core
                    , stripe-http-streams
                    , stripe-tests
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts

source-repository head
  type:     git
  subdir:   stripe-http-streams
  location: git://github.com/dmjio/stripe-haskell.git
