name:                stripe-tests
version:             2.5.0
synopsis:            Tests for Stripe API bindings for Haskell
license:             MIT
license-file:        LICENSE
author:              David Johnson, Jeremy Shaw
maintainer:          djohnson.m@gmail.com
copyright:           Copyright (c) 2016 David M. Johnson, Jeremy Shaw
homepage:            https://github.com/dmjio/stripe-haskell
bug-reports:         https://github.com/dmjio/stripe-haskell/issues
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Description:
    .
    <<https://stripe.com/img/navigation/logo@2x.png>>
    .
    [100+ Hspec Tests]
    This cabal package contains all the Stripe Hspec tests in an HTTP backend agnostic format.
    To run these tests you will need to install a package such as `stripe-http-client`.
    This allows each backend to run the full testsuite.

library
  hs-source-dirs:      tests
  build-depends:       aeson                >= 0.8 && < 0.10 || >= 0.11 && < 1.5
                     , base                 >= 4.7   && < 5
                     , bytestring           >= 0.10  && < 0.11
                     , free                 >= 4.10  && < 6
                     , mtl                  >= 2.1.2 && < 2.3
                     , random               >= 1.1   && < 1.2
                     , hspec                >= 2.1.0 && < 2.7
                     , hspec-core           >= 2.1.0 && < 2.7
                     , stripe-core
                     , text                 >= 1.0   && < 1.3
                     , time                 >= 1.4   && < 1.9
                     , transformers         >= 0.3   && < 0.6
                     , unordered-containers >= 0.2.5 && < 0.3

  default-language:    Haskell2010
  exposed-modules:
                       Web.Stripe.Test.Account
                       Web.Stripe.Test.ApplicationFee
                       Web.Stripe.Test.ApplicationFeeRefund
                       Web.Stripe.Test.Balance
                       Web.Stripe.Test.Card
                       Web.Stripe.Test.Charge
                       Web.Stripe.Test.Config
                       Web.Stripe.Test.Coupon
                       Web.Stripe.Test.Customer
                       Web.Stripe.Test.Discount
                       Web.Stripe.Test.Dispute
                       Web.Stripe.Test.Event
                       Web.Stripe.Test.Invoice
                       Web.Stripe.Test.InvoiceItem
                       Web.Stripe.Test.Plan
                       Web.Stripe.Test.Prelude
                       Web.Stripe.Test.Recipient
                       Web.Stripe.Test.Refund
                       Web.Stripe.Test.Subscription
                       Web.Stripe.Test.Token
                       Web.Stripe.Test.Transfer
                       Web.Stripe.Test.Util
                       Web.Stripe.Test.AllTests
  ghc-options:        -Wall


source-repository head
  type:     git
  subdir:   stripe-tests
  location: git://github.com/dmjio/stripe-haskell.git
